# trellomize

./: .gitignore  LICENSE  README.md  main.py  manager.py  pyproject.toml  requirements.txt
database/: db_comment.json  db_history.json  db_project.json  db_task.json  db_user.json  db_user_project.json  db_user_task.json  logs.txt
libs/json_adapter/: __init__.py
libs/log/: __init__.py
office/: exceptions.py  models.py  views.py
office/tests/: test_comment.py  test_history.py  test_project.py  test_task.py  test_user.py
